--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -26,18 +26,24 @@
                         <span class="icon-bar"></span>
                     </button>
                     <!--Logo-->
-                    <a href="#sc1" class="navbar-left show"><img src="/images/logo.png" alt="library"></a>
+                    <a href="/home" class="navbar-left show"><img src="/images/logo.png" alt="library"></a>
                     <div class="space-10"></div>
                 </div>
                 <!--Toggle-button-->
 
                 <!--Active User-->
-                <div class="nav navbar-right">
+                <% if (typeof user.name !== 'undefined' && user.name) { %>
+                    <div class="nav navbar-right">
                     <div class="active-user navbar-left active">
                         <ul class="list-unstyled">
                             <li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <img src="/images/active_user.png" class="img-circle img-thumbnail" alt="library" />
+                                    <% if (typeof user.avatar !== 'undefined' && user.avatar) { %>
+                                        <img src="<%= user.avatar %>" class="img-circle img-thumbnail" alt="library" />
+                                    <% }
+                                    else { %>
+                                        <img src="/images/user_default.png" class="img-circle img-thumbnail" alt="library" />
+                                    <% } %>
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
@@ -50,21 +56,23 @@
                                         <a href="#"> <span><i class="icofont icofont-settings"></i></span> Settings</a>
                                     </li>
                                     <li>
-                                        <a href="#"> <span><i class="icofont icofont-read-book"></i></span>My Books</a>
+                                        <a href="#"> <span><i class="icofont icofont-read-book"></i></span> My Books</a>
                                     </li>
                                     <li>
-                                        <a href="#"> <span><i class="icofont icofont-logout"></i></span> Log Out</a>
+                                        <a href="/logout"> <span><i class="icofont icofont-logout"></i></span> Log Out</a>
                                     </li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
                 </div>
+                <% } %>
+
                 <!--Mainmenu list-->
                 <div class="navbar-right in fade" id="mainmenu">
                     <ul class="nav navbar-nav nav-white text-uppercase">
                         <li class="active">
-                            <a href="#sc1">Home</a>
+                            <a href="/home">Home</a>
                         </li>
                         <li>
                             <a href="#sc2">About</a>
@@ -81,9 +89,9 @@
                         <li>
                             <a href="books.html">Books</a>
                         </li>
-                        <% if (typeof access_token !== 'undefined' && access_token) { %>
+                        <% if (typeof user.name !== 'undefined' && user.name) { %>
                             <li>
-                                <a href="/logout">Logout</a>
+                                <a href="#"><%= user.name %></a>
                             </li>
                         <% }
                         else { %>
@@ -101,6 +109,11 @@
     <!-- Header-jumbotron -->
     <div class="space-100"></div>
     <div class="header-text">
+        <% if (typeof info != 'undefined' && info != '') { %>
+            <div class="col-md-4 col-md-offset-4 alert alert-danger alert-dismissable fade in">
+                <center> <strong> <%= info %> </strong> </center>
+            </div>
+        <% } %>
         <div class="container">
             <div class="row wow fadeInUp">
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1 text-center">
