--- a/views/books/section.ejs
+++ b/views/books/section.ejs
@@ -16,10 +16,9 @@
                                 <div class="col-xs-8">
                                     <div class="form-group">
                                         <select name="sort" id="sort" class="form-control">
-                                            <option value="">Best Match</option>
-                                            <option value="">Best Book</option>
-                                            <option value="">Latest Book</option>
-                                            <option value="">Old Book</option>
+                                            <% conditions.items.forEach(function (condition) { %>
+                                            <option value="<%= condition.field %>"><%= condition.text %></option>
+                                            <% }) %>
                                         </select>
                                     </div>
                                 </div>
@@ -108,5 +107,9 @@
         var nextPage = $(this).attr('data-next-page');
         var field = $(this).attr('data-field');
         Book.loadMoreAtSectionPage(field, nextPage);
+    });
+
+    $('#sort').on('change', function () {
+        alert('aaaaaaaa');
     });
 </script>
